RESOLVED FIXED281143
[GTK][WPE] Network sessions are not destroyed in platformFinalize
https://bugs.webkit.org/show_bug.cgi?id=281143
Summary [GTK][WPE] Network sessions are not destroyed in platformFinalize
Przemyslaw Gorszkowski
Reported 2024-10-09 09:06:03 PDT
The problem was found and fixed in https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1406. It can happen that DestroySession message from UI process is not handled in NetworkProcess, because UI process after sends the DestroySession message it also closes connection to the Network process, which causes exit procedure on Network process side. Once that happens, active NetworkSessions are never destroyed. The implementation should be the same in case of CURL and SOUP implementation.
Attachments
Przemyslaw Gorszkowski
Comment 1 2024-10-10 00:21:32 PDT
EWS
Comment 2 2024-10-14 06:02:03 PDT
Committed 285119@main (34015b17e69f): <https://commits.webkit.org/285119@main> Reviewed commits have been landed. Closing PR #34968 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-14 06:03:12 PDT
Note You need to log in before you can comment on or make changes to this bug.