Cherry-pick 285119@main (34015b17e69f). https://bugs.webkit.org/show_bug.cgi?id=281143

[GTK][WPE] Network sessions are not destroyed in platformFinalize
    https://bugs.webkit.org/show_bug.cgi?id=281143

    Reviewed by Michael Catanzaro and Carlos Garcia Campos.

    When we close UIProcess it sends to NetworkProcess message(s)
    to destroy all sessions (DestroySession) but right after that
    the IPC connection is close which causes that NetworkProcess
    can be closed without destroying all sessions.

    This change destroys all sessions when the NetworkProcess is
    closing.

    Original author: Andrzej Surdej <Andrzej_Surdej@comcast.com>

    See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1406

    * Source/WebKit/NetworkProcess/soup/NetworkProcessMainSoup.cpp:

    Canonical link: https://commits.webkit.org/285119@main

Canonical link: https://commits.webkit.org/282416.211@webkitglib/2.46